--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   geocoding: ^2.0.1
   google_maps_flutter: ^2.1.1
   jiffy: ^4.1.0
+  image_picker: ^0.8.4+4
+  http: ^0.13.4
+  shared_preferences: ^2.0.9
 
 dev_dependencies:
   flutter_native_splash: ^1.3.1
