--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker: ^0.8.4+4
   http: ^0.13.4
   shared_preferences: ^2.0.9
+  permission_handler: ^8.3.0
 
 dev_dependencies:
   flutter_native_splash: ^1.3.1
