--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,19 @@ dependencies:
   http: ^0.13.4
   shared_preferences: ^2.0.9
   permission_handler: ^8.3.0
+  flutter_local_notifications: ^9.1.4
+  timezone: ^0.8.0
+  firebase_core: "^1.10.0"
+  get: ^4.5.1
+  firebase_auth: ^3.2.0
+  firebase_messaging: "^11.1.0"
+  google_fonts: ^2.1.0
+  url_launcher: ^6.0.17
+  location: ^4.2.0
+
+
+
+
 
 dev_dependencies:
   flutter_native_splash: ^1.3.1
@@ -85,6 +98,7 @@ flutter:
   #   - images/a_dot_burr.jpeg
   assets:
     - images/
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
